# piper

./: CMakeLists.txt  README.md  package.xml
config/: global_costmap.yaml  global_planner.yaml  vector_diff.yaml
launch/: turtlebot.launch  turtlebot_diff_interface.launch  turtlebot_interface.launch
maps/: social_contexts.yaml
msg/: FieldGrid.msg
piper/base/: problem.cpp  problem.h  robot.cpp  robot.h  traj.cpp  traj.h
piper/mobilerobot/: BatchTrajOptimizerNavFn.h  GaussianProcessInterpolatorDiff.h  GaussianProcessPriorDiff.h  ISAM2TrajOptimizerNavFn-inl.h  ISAM2TrajOptimizerNavFn.h  NavFnDiff-inl.h  NavFnDiff.h  NavFnHingleDiff.h  NavPotential.h  diff_all.h  diff_base.cpp  diff_base.h  diff_drive.cpp  diff_drive.h
piper/ros_application/: ros_sdf.cpp  ros_sdf.h  turtlebot_server.cpp
piper/turtlebot_interface/: diff_interface.cpp  diff_interface.h  ros_sdf.cpp  turtlebot_interface.cpp  turtlebot_interface.h
problem/: example_vector.yaml
rviz/: turtlebot.rviz
scripts/: png2fieldgrid.py  steap_visualize.py  turtlebot_traj_server.py
worlds/: social_contexts.world
